; ModuleID = '/home/carl/AnghaBench/systemd/src/rc-local-generator/extr_rc-local-generator.c_check_executable.c'
source_filename = "/home/carl/AnghaBench/systemd/src/rc-local-generator/extr_rc-local-generator.c_check_executable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@X_OK = common dso_local global i32 0, align 4
@errno = common dso_local global i64 0, align 8
@ENOENT = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [29 x i8] c"%s does not exist, skipping.\00", align 1
@EACCES = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [39 x i8] c"%s is not marked executable, skipping.\00", align 1
@.str.2 = private unnamed_addr constant [64 x i8] c"Couldn't determine if %s exists and is executable, skipping: %m\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @check_executable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @check_executable(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %4 = load i8*, i8** %3, align 8
  %5 = call i32 @assert(i8* %4)
  %6 = load i8*, i8** %3, align 8
  %7 = load i32, i32* @X_OK, align 4
  %8 = call i64 @access(i8* %6, i32 %7)
  %9 = icmp slt i64 %8, 0
  br i1 %9, label %10, label %30

10:                                               ; preds = %1
  %11 = load i64, i64* @errno, align 8
  %12 = load i64, i64* @ENOENT, align 8
  %13 = icmp eq i64 %11, %12
  br i1 %13, label %14, label %18

14:                                               ; preds = %10
  %15 = load i64, i64* @errno, align 8
  %16 = load i8*, i8** %3, align 8
  %17 = call i32 @log_debug_errno(i64 %15, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0), i8* %16)
  store i32 %17, i32* %2, align 4
  br label %31

18:                                               ; preds = %10
  %19 = load i64, i64* @errno, align 8
  %20 = load i64, i64* @EACCES, align 8
  %21 = icmp eq i64 %19, %20
  br i1 %21, label %22, label %26

22:                                               ; preds = %18
  %23 = load i64, i64* @errno, align 8
  %24 = load i8*, i8** %3, align 8
  %25 = call i32 @log_info_errno(i64 %23, i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str.1, i64 0, i64 0), i8* %24)
  store i32 %25, i32* %2, align 4
  br label %31

26:                                               ; preds = %18
  %27 = load i64, i64* @errno, align 8
  %28 = load i8*, i8** %3, align 8
  %29 = call i32 @log_warning_errno(i64 %27, i8* getelementptr inbounds ([64 x i8], [64 x i8]* @.str.2, i64 0, i64 0), i8* %28)
  store i32 %29, i32* %2, align 4
  br label %31

30:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %31

31:                                               ; preds = %30, %26, %22, %14
  %32 = load i32, i32* %2, align 4
  ret i32 %32
}

declare dso_local i32 @assert(i8*) #1

declare dso_local i64 @access(i8*, i32) #1

declare dso_local i32 @log_debug_errno(i64, i8*, i8*) #1

declare dso_local i32 @log_info_errno(i64, i8*, i8*) #1

declare dso_local i32 @log_warning_errno(i64, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
